--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="flex items-start gap-4 mb-6">
       <div>
         <h1 class="text-2xl font-bold">IT Operations Task Manager</h1>
-        <div class="text-sm text-gray-600">ITOPS Realtime collaboration — all users can edit. Locks are anonymous and auto-expire (2 minutes).</div>
+        <div class="text-sm text-gray-600">Realtime collaboration — all users can edit. Locks are anonymous and auto-expire (2 minutes).</div>
       </div>
       <div class="ml-auto">
         <button id="resetBtn" class="bg-red-500 text-white px-3 py-2 rounded">Reset All</button>
@@ -122,7 +122,7 @@
           <div id="shift3-slots" class="mt-3 space-y-2"></div>
         </div>
       </div>
-      <p class="text-sm text-gray-600 mt-3">Select members present for the shift then click Generate. You may override any slot from the dropdown; changes sync instantly. Slots are locked briefly when edited to avoid collisions.</p>
+      <p class="text-sm text-gray-600 mt-3">Select members (TRIGRAM) present for the shift then click Generate. You may override any slot from the dropdown; changes sync instantly. Slots are locked briefly when edited to avoid collisions.</p>
     </section>
 
     <!-- OUTPUT -->
@@ -179,6 +179,12 @@
     }
     function sanitizeLongText(str) {
       return String(str || '').replace(/</g,'').replace(/>/g,'').slice(0, MAX_TEXT_LENGTH);
+    }
+
+    // create a safe key for Firebase paths from a label
+    function safeKeyFromLabel(label) {
+      // replace restricted characters: . # $ [ ] / and slice short to prevent very long keys
+      return String(label).replace(/[.#$\[\]\/]/g, '_').slice(0, 200);
     }
 
     // Tab switching function - MUST BE GLOBAL
@@ -419,7 +425,7 @@
     watchText('monthly','monthlyText');
     watchText('patching','patchingText');
 
-    // ---------- monitoring rendering & locks ----------
+    // ---------- monitoring rendering & locks (FIXED: safe keys + label) ----------
     async function renderShift(shiftId) {
       const snap = await get(ref(db, `monitoringSchedules/${shiftId}`));
       const shiftData = snap.exists() ? snap.val() : { start:(shiftId==='shift1'?'06:30':shiftId==='shift2'?'14:30':'22:30'), end:(shiftId==='shift1'?'14:30':shiftId==='shift2'?'22:30':'06:30'), members:{}, slots:{} };
@@ -440,14 +446,15 @@
       slotsContainer.innerHTML = '';
       const slots = shiftData.slots || {};
 
-      // Sort slots by start timestamp if present, else keep lexical order
-      const sortedSlots = Object.entries(slots).sort((a,b)=>{
-        const ea = a[1]?.startTs || 0;
-        const eb = b[1]?.startTs || 0;
-        return ea - eb || a[0].localeCompare(b[0]);
+      // Build array [slotKey, slotData] and sort by startTs if present
+      const slotEntries = Object.entries(slots).map(([k,v]) => [k, v]);
+      slotEntries.sort((a,b) => {
+        const sa = a[1]?.startTs || 0;
+        const sb = b[1]?.startTs || 0;
+        return sa - sb || (a[0] < b[0] ? -1 : 1);
       });
 
-      if (sortedSlots.length === 0) {
+      if (slotEntries.length === 0) {
         const tip = document.createElement('div');
         tip.className = 'text-sm text-gray-500';
         tip.textContent = 'No slots yet. Click Generate to auto-divide.';
@@ -455,14 +462,15 @@
         return;
       }
 
-      sortedSlots.forEach(([slotTime, sData]) => {
+      slotEntries.forEach(([slotKey, sData]) => {
+        const displayLabel = sData.label || slotKey; // label stored explicitly when created
         const row = document.createElement('div');
         row.className = 'flex gap-3 items-center py-1';
-        const timeDiv = document.createElement('div'); timeDiv.className = 'w-56 text-sm'; timeDiv.textContent = slotTime;
-        const sel = document.createElement('select'); sel.dataset.slot = `${shiftId}|${slotTime}`; sel.className = 'border rounded p-1 w-40';
+        const timeDiv = document.createElement('div'); timeDiv.className = 'w-56 text-sm'; timeDiv.textContent = displayLabel;
+        const sel = document.createElement('select'); sel.dataset.slot = `${shiftId}|${slotKey}`; sel.className = 'border rounded p-1 w-40';
         const lockInfoEl = document.createElement('div'); lockInfoEl.className = 'text-xs text-gray-500 ml-2'; lockInfoEl.dataset.lockinfo = '';
 
-        // fill options safely
+        // fill options safely (TRIGRAM keys)
         const memObj = window._membersMap || DEFAULT_MEMBERS;
         const placeholder = document.createElement('option'); placeholder.value = ''; placeholder.textContent = '-- Select --';
         sel.appendChild(placeholder);
@@ -476,9 +484,9 @@
         row.appendChild(lockInfoEl);
         slotsContainer.appendChild(row);
 
-        const slotRef = ref(db, `monitoringSchedules/${shiftId}/slots/${encodeURIComponent(slotTime)}`);
+        const slotRef = ref(db, `monitoringSchedules/${shiftId}/slots/${slotKey}`);
 
-        // Realtime watch for slot to update lock display
+        // Realtime watch for slot to update lock display and member
         onValue(slotRef, snap => {
           const val = snap.exists() ? snap.val() : {};
           const lockedBy = val.lockedBy || "";
@@ -502,16 +510,15 @@
 
         // when user changes selection -> attempt to acquire lock then set via transaction
         sel.onchange = async () => {
-          const slotKeyRef = ref(db, `monitoringSchedules/${shiftId}/slots/${encodeURIComponent(slotTime)}`);
+          const slotKeyRef = ref(db, `monitoringSchedules/${shiftId}/slots/${slotKey}`);
           const success = await tryAcquireLockTransactional(slotKeyRef, sel.value || "");
           if (!success) {
             alert('Slot is locked by another user. Try again later.');
-            // read current DB value to revert
             const cur = (await get(slotKeyRef)).val() || {};
             sel.value = cur.member || '';
             return;
           }
-          // success -> (transaction already set member + lock info)
+          // success -> transaction already set member + lock info
         };
       });
     }
@@ -522,8 +529,8 @@
         const res = await runTransaction(slotRef, current => {
           const now = Date.now();
           if (!current) {
-            // create node with encoded label data preserved by client side
-            return { member: memberKey || "", lockedBy: CLIENT_ID, lockTs: now, startTs: current?.startTs || 0 };
+            // create node with label left blank (should not happen normally)
+            return { member: memberKey || "", lockedBy: CLIENT_ID, lockTs: now, startTs: current?.startTs || 0, label: current?.label || "" };
           }
           const lockedBy = current.lockedBy || "";
           const lockTs = current.lockTs || 0;
@@ -538,7 +545,6 @@
           // cannot acquire -> abort: return undefined
           return;
         });
-        // runTransaction resolves even if aborted; check committed
         return !!(res && res.committed);
       } catch (err) {
         console.error('Transaction error', err);
@@ -551,7 +557,7 @@
     onValue(ref(db,'monitoringSchedules/shift2'), snap => renderShift('shift2'));
     onValue(ref(db,'monitoringSchedules/shift3'), snap => renderShift('shift3'));
 
-    // generate shift slots (auto-divide)
+    // generate shift slots (auto-divide) - now stores safe keys + label field
     function toDate(hm){ const [hh,mm]=hm.split(':').map(Number); const d=new Date(); d.setHours(hh,mm,0,0); return d; }
     function fmt(d){ let h=d.getHours(), m=d.getMinutes(), am=h>=12?'PM':'AM'; h=h%12||12; return `${String(h)}:${String(m).padStart(2,'0')} ${am}`; }
 
@@ -577,11 +583,11 @@
       // Sort slots by start time
       slotArray.sort((a,b)=> a.startTs - b.startTs);
 
-      // Convert to object for Firebase but use encoded keys to avoid illegal characters in path
+      // Convert to object for Firebase using safe keys and store label inside entry
       const slots = {};
       slotArray.forEach(slot => {
-        // use unencoded label as displayed, but store under encoded key
-        slots[slot.label] = { member: slot.member, lockedBy: "", lockTs: 0, startTs: slot.startTs };
+        const key = safeKeyFromLabel(slot.label);
+        slots[key] = { label: slot.label, member: slot.member, lockedBy: "", lockTs: 0, startTs: slot.startTs };
       });
 
       // persist members and slots (overwrite this shift)
@@ -611,7 +617,7 @@
       Object.entries(sched).forEach(([shiftId, shift])=>{
         out += `\n${shiftId.toUpperCase()} (${shift.start} - ${shift.end})\n`;
         const s = shift.slots || {};
-        Object.entries(s).forEach(([label, info]) => out += `${label} — ${info.member || 'Unassigned'}\n`);
+        Object.entries(s).forEach(([key, info]) => out += `${info.label || key} — ${info.member || 'Unassigned'}\n`);
       });
       el('finalOutput').value = out;
       await set(ref(db,'finalOutput'), out);
@@ -638,7 +644,6 @@
     // Reset (safe: overwrite defaults rather than removing DB)
     el('resetBtn').addEventListener('click', async () => {
       if (!confirm('Reset ALL data to safe defaults? This will overwrite tasks, schedules, members and texts but will NOT delete the database.')) return;
-      // prepare defaults same as ensureDefaults
       const payload = {
         teamMembers: DEFAULT_MEMBERS,
         dailyTasks: (function(){
