--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>IT Operations Task Manager</title>
+  <title>📃 IT Operations Task Manager</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -15,7 +15,7 @@
   <div class="max-w-6xl mx-auto bg-white rounded-xl shadow p-6">
     <header class="flex items-start gap-4 mb-6">
       <div>
-        <h1 class="text-2xl font-bold">IT Operations Task Manager</h1>
+        <h1 class="text-2xl font-bold">🚨 IT Operations Task Manager</h1>
         <div class="text-sm text-gray-600">Realtime collaboration — all users can edit. Locks are anonymous and auto-expire.</div>
       </div>
       <div class="ml-auto">
