--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <div class="max-w-6xl mx-auto bg-white rounded-xl shadow p-6">
     <header class="flex items-start gap-4 mb-6">
       <div>
-        <h1 class="text-2xl font-bold">IT Operations Task Manager (Realtime)</h1>
+        <h1 class="text-2xl font-bold">IT Operations Task Manager</h1>
         <div class="text-sm text-gray-600">Realtime collaboration — all users can edit. Locks are anonymous and auto-expire (2 minutes).</div>
       </div>
       <div class="ml-auto">
-        <button id="resetBtn" class="bg-red-500 text-white px-3 py-2 rounded">Reset All (safe)</button>
+        <button id="resetBtn" class="bg-red-500 text-white px-3 py-2 rounded">Reset All</button>
       </div>
     </header>
 
@@ -620,3 +620,4 @@
   </script>
 </body>
 </html>
+
