updated members per shift for next cycle

--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
     const PRESENCE_PATH = `${ROOT}/presence/${TODAY}`;
 
     const DEFAULT_MEMBERS = {
-      shift1: ["IRO","FFA","JMA","NLA","MAG","RDE"],
+      shift1: ["PYC","CTR","CCR","LSU","HRO","DGU"],
 	  //["PYC","CTR","CCR","LSU","HRO","DGU"] - swap nyo lang yung values sa loob ng current array
-      shift2: ["DDI","CTR","HDE","MBA","ESO","AAS"],
+      shift2: ["IRO","JRU","JMA","NLA","MAG","RDE"],
 	  //["IRO","JRU","JMA","NLA","MAG","RDE"] - swap nyo lang yung values sa loob ng current array
-      shift3: ["PYC","JRU","CCR","LSU","HRO","DGU"]
-	  //[DDI","FFA","HDE","MBA","ESO","AAS"] - swap nyo lang yung values sa loob ng current array
+      shift3: ["DDI","FFA","HDE","MBA","ESO","AAS"]
+	  //["DDI","FFA","HDE","MBA","ESO","AAS"] - swap nyo lang yung values sa loob ng current array
     };
 
     const DEFAULT_TASKS = {
@@ -702,3 +702,4 @@
   </script>
 </body>
 </html>
+
